--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -17,11 +17,14 @@ $container-max-width: 1000px;
 body {
   margin: 0;
   padding: 0;
-  background: $body-background url("../images/home5.jpg") 0 0;
+  background: $body-background url("../images/home5.jpg") no-repeat center center; /* Center the image */
+  background-size: cover; /* Scale the image to cover the entire screen */
   color: $body-foreground;
   font-size: 16px;
   line-height: 1.5;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+}
+
 }
 
 /* General & 'Reset' Stuff */
