--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -17,8 +17,8 @@ $container-max-width: 1000px;
 body {
   margin: 0;
   padding: 0;
-  background: $body-background url("../images/home5.jpg") no-repeat center center; /* Center the image */
-  background-size: cover; /* Scale the image to cover the entire screen */
+  background: $body-background url("../images/home6.jpg") no-repeat center center; 
+  background-size: cover; 
   color: $body-foreground;
   font-size: 16px;
   line-height: 1.5;
