--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: 'en-US' }}">
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
 
-{% seo %}
+    {% seo %}
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="{{ site.title | default: https://shanechandler-cyber.github.io/ShaneChandlerPortfolio/ }}" />
+    <meta property="og:description" content="{{ site.description | default: site.github.project_tagline }}" />
+    <meta property="og:image" content="{{ '/assets/images/portfolio-image.jpg' | relative_url }}" />
+    <meta property="og:url" content="{{ site.url | default: 'https://shanechandler-cyber.github.io/ShaneChandlerPortfolio/' }}" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="{{ site.title | default: site.github.repository_name }}" />
+    <meta name="twitter:description" content="{{ site.description | default: site.github.project_tagline }}" />
+    <meta name="twitter:image" content="{{ '/assets/images/portfolio-image.jpg' | relative_url }}" />
   </head>
 
   <body>
