--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,50 +1,41 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: 'en-US' }}">
-<head>
+<html lang="{{ site.lang | default: "en-US" }}">
+  <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
 
-    {% seo %}
-    
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="{{ site.title | default: site.github.repository_name }}" />
-    <meta property="og:description" content="{{ site.description | default: site.github.project_tagline }}" />
-    <meta property="og:image" content="{{ '/assets/images/portfolio-image.jpg' | relative_url }}" />
-    <meta property="og:url" content="{{ site.url | default: 'https://yourwebsite.com' }}" />
-    <meta property="og:type" content="website" />
+{% seo %}
+  </head>
 
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="{{ site.title | default: site.github.repository_name }}" />
-    <meta name="twitter:description" content="{{ site.description | default: site.github.project_tagline }}" />
-    <meta name="twitter:image" content="{{ '/assets/images/portfolio-image.jpg' | relative_url }}" />
-</head>
+  <body>
 
-<body>
     <header>
-        <div class="container">
-            <a id="a-title" href="{{ '/' | relative_url }}">
-                <h1>{{ site.title | default: site.github.repository_name }}</h1>
-            </a>
-            <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+      <div class="container">
+        <a id="a-title" href="{{ '/' | relative_url }}">
+          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+        </a>
+        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
-            <section id="downloads">
-                {% if site.show_downloads %}
-                    <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
-                    <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
-                {% endif %}
-            </section>
-        </div>
+        <section id="downloads">
+          {% if site.show_downloads %}
+            <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
+            <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
+          {% endif %}
+          
+        </section>
+      </div>
     </header>
 
     <div class="container">
-        <section id="main_content">
-            {{ content }}
-        </section>
+      <section id="main_content">
+        {{ content }}
+      </section>
     </div>
-</body>
+  </body>
 </html>
 
+
+thats my htlm layout, update it for me 
