--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,16 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-77HYH7QT4Z"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-77HYH7QT4Z"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-77HYH7QT4Z');
+    </script>
 
-  gtag('config', 'G-77HYH7QT4Z');
-</script>
     <title>{{ page.title }}</title>
-    <meta name="Homepage" content="{{ page.description | escape }}">
+    <meta name="description" content="{{ page.description | escape }}">
     <meta name="keywords" content="{{ page.keywords | escape }}">
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,12 +19,10 @@
     
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
-
-{% seo %}
+    {% seo %}  <!-- If you're using a plugin for SEO, keep this line -->
   </head>
 
   <body>
-
     <header>
       <div class="container">
         <a id="a-title" href="{{ '/' | relative_url }}">
@@ -37,7 +35,6 @@
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
-          
         </section>
       </div>
     </header>
@@ -45,16 +42,6 @@
     <div class="container">
       <section id="main_content">
         {{ content }}
-
-
-        <head>
-    <title>{{ page.title }}</title>
-    <meta name="description" content="{{ page.description | escape }}">
-    <meta name="keywords" content="{{ page.keywords | escape }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Add any other meta tags you need -->
-</head>
-
       </section>
     </div>
   </body>
