--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
       gtag('config', 'G-77HYH7QT4Z');
     </script>
 
-    <title>{{ page.title }}</title>
+    <title>{{ Shane Chandler Portfolio }}</title>
     <meta name="description" content="{{ page.description | escape }}">
     <meta name="keywords" content="{{ page.keywords | escape }}">
     <meta charset='utf-8'>
