--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="container">
-      <section id="main_content" style="height: 500px; overflow-y: auto;">
+      <section id="main_content">
         {{ content }}
       </section>
     </div>
